--- a/src/app/recepie/recepie-details/recepie-details.component.html
+++ b/src/app/recepie/recepie-details/recepie-details.component.html
@@ -20,7 +20,7 @@
       </button>
      <ul class="dropdown-menu" >
            <li><a (click)="onAddtoShoppingList()" style="cursor:pointer">Add shopping list</a></li>
-            <li><a style="cursor:pointer">Edit recepie</a></li>
+            <li><a style="cursor:pointer" (click)="navigatetoEditMode()">Edit recepie</a></li>
             <li><a style="cursor:pointer">delete recepie</a></li>
          </ul>
   </div>
