--- a/src/app/recepie/recepie-list/recepie-list.component.html
+++ b/src/app/recepie/recepie-list/recepie-list.component.html
@@ -9,6 +9,6 @@
  
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-success">New Recepie</button>
+      <button class="btn btn-success" (click)="navigateToNew()">New Recepie</button>
     </div>
   </div>
