--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -2,16 +2,16 @@
 
 <div class="row">
 <div class="col-xs-12">
-  <form>
+  <form (ngSubmit)="onSubmit(f)" #f="ngForm">
     <div class="row">
 <div class="col-sm-5 form-group">
 <label for="name">Name</label>
-<input type="text" id="name" class="form-control" #nameInput>
+<input type="text" id="name" class="form-control" name="name" ngModel required >
 </div>
 
 <div class="col-sm-2 form-group">
 <label for="amount">Amount</label>
-<input type="text" id="amount"  class="form-control" #amountInput>
+<input type="text" id="amount"  class="form-control" name="amount" ngModel required >
 </div> 
 </div>
 
@@ -19,9 +19,9 @@
  <div class="row">
 <div class="col-xs-12 form-group">
 
-<button type="submit"  class="btn-success" (click)="onAdd()">Add</button>
-<button type="submit"  class="btn-danger">delete</button>
-<button type="submit"  class="btn-primary">clear</button>
+<button type="submit"  class="btn-success" [disabled]="!f.valid">{{editMode?'Update':'Add'}}</button>
+<button type="button"  class="btn-danger" (click)="deleteIngred()">delete</button>
+<button type="button"  class="btn-primary" (click)="clearForm()">clear</button>
 </div>
  </div>
   </form>
