--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -20,7 +20,7 @@
 <div class="col-xs-12 form-group">
 
 <button type="submit"  class="btn-success" [disabled]="!f.valid">{{editMode?'Update':'Add'}}</button>
-<button type="button"  class="btn-danger" (click)="deleteIngred()">delete</button>
+<button type="button"  class="btn-danger" *ngIf="editMode" (click)="deleteIngred()">delete</button>
 <button type="button"  class="btn-primary" (click)="clearForm()">clear</button>
 </div>
  </div>
