--- a/src/app/recepie/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepie/recepie-edit/recepie-edit.component.html
@@ -1,1 +1,11 @@
-<p>receoie edit works</p>
+<!-- <p>receoie edit works</p> -->
+
+<div class="container">
+<div class="row">
+<div class="col-xs-12">
+  
+</div>
+
+</div>
+
+</div>
