--- a/src/app/recepie/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepie/recepie-edit/recepie-edit.component.html
@@ -3,7 +3,14 @@
 <div class="container">
 <div class="row">
 <div class="col-xs-12">
-  
+  <div class="row">
+<div class="col-xs-12">
+  <button type="submit"  class="btn-success" >Save</button>
+<button type="button"  class="btn-danger" >Cancel</button>
+</div>
+
+</div>
+
 </div>
 
 </div>
