--- a/src/app/recepie/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepie/recepie-edit/recepie-edit.component.html
@@ -3,12 +3,12 @@
 <div class="container">
 <div class="row">
 <div class="col-xs-6">
-  <form>
+  <form [formGroup]="recepieForm" (ngSubmit)="onSubmit()">
 
   <div class="row">
 <div class="col-xs-12">
-  <button type="submit"  class="btn btn-success" >Save</button>
-<button type="button"  class="btn btn-danger" >Cancel</button>
+  <button type="submit"  class="btn btn-success"  >Save</button>
+<button type="button"  class="btn btn-danger" (click)="cancel()" >Cancel</button>
 </div>
   </div>
 
@@ -16,17 +16,17 @@
 <div class="col-xs-12">
 <div class="form-group">
   <label for="name">Name</label>
-  <input type="text" id="name" class="form-control">
+  <input type="text" id="name" class="form-control"  formControlName="name">
 </div>
 </div>
 </div>
 
  
  <div class="row">
-<div class="col-xs-12">
+<div class="col-xs-12" >
 <div class="form-group">
   <label for="imagePath">Image URL</label>
-  <input type="text" id="imagePath" class="form-control">
+  <input type="text" id="imagePath" class="form-control" formControlName="imagePath">
 </div>
 </div>
 </div>
@@ -44,7 +44,7 @@
 <div class="col-xs-12">
 <div class="form-group">
   <label for="description">Description</label>
-  <textarea type="text" id="description" class="form-control" rows="5"> </textarea>
+  <textarea type="text" id="description" class="form-control" rows="5" formControlName="description"> </textarea>
 </div>
 </div>
 </div>
@@ -52,13 +52,14 @@
 
 
  <div class="row">
-<div class="col-xs-12">
- <div class="row">
+<div class="col-xs-12" formArrayName="ingredients">
+ <div class="row" *ngFor="let x of recepieForm.get('ingredients').controls; let i=index" [formGroupName]="i">
+  
 <div class="col-xs-8">
-  <input type="text"class="form-control">
+  <input type="text"class="form-control" formControlName="name">
 </div>
 <div class="col-xs-2">
-  <input type="text"class="form-control">
+  <input type="text"class="form-control" formControlName="amount">
 </div>
 <div class="col-xs-2">
 <button type="button"  class="btn btn-danger" >X</button>
