--- a/src/app/recepie/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepie/recepie-edit/recepie-edit.component.html
@@ -53,7 +53,7 @@
 
  <div class="row">
 <div class="col-xs-12" formArrayName="ingredients">
- <div class="row" *ngFor="let x of recepieForm.get('ingredients').controls; let i=index" [formGroupName]="i">
+ <div class="row" *ngFor="let x of recepieForm.get('ingredients').controls; let i=index" [formGroupName]="i" style="margin-top:10px">
   
 <div class="col-xs-8">
   <input type="text"class="form-control" formControlName="name">
@@ -67,6 +67,11 @@
 </div>
  </div>
   
+  <div class="row">
+    <div class="col-xs-12">
+      <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+    </div>
+  </div>
 
 </div>
 </div>
