--- a/src/app/recepie/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepie/recepie-edit/recepie-edit.component.html
@@ -7,7 +7,7 @@
 
   <div class="row">
 <div class="col-xs-12">
-  <button type="submit"  class="btn btn-success"  >Save</button>
+  <button type="submit"  class="btn btn-success" [disabled]="!recepieForm.valid" >Save</button>
 <button type="button"  class="btn btn-danger" (click)="cancel()" >Cancel</button>
 </div>
   </div>
